第一次cc修改，周三19：47左右提交，集中在对newapi的修改以及api测试和writeup测试脚本

--- a/.env
+++ b/.env
@@ -1,27 +1,53 @@
 # Environment Variables for launch_multiagent.py
 # Copy this file to .env and fill in your API keys
 
-# Required API Keys based on model usage in create_model() function:
+# =============================================================================
+# NewAPI Configuration (Primary LLM Provider)
+# =============================================================================
+# All LLM calls use NewAPI with OpenAI SDK compatibility
+# Endpoint: newapi.tsingyuai.com/v1
+# Supported models: gpt-5-nano, gpt-5-mini, gpt-5, gpt-4o, claude-*, etc.
+OPENAI_API_KEY=sk-qN38FkO0BZa79ZmaQIU6BCoxc8NaeRlolLaNeKVzXpNP1F5q
+OPENAI_BASE_URL=https://newapi.tsingyuai.com/v1
 
-# For Claude models
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# For Claude models via NewAPI (uses same key)
+ANTHROPIC_API_KEY=sk-qN38FkO0BZa79ZmaQIU6BCoxc8NaeRlolLaNeKVzXpNP1F5q
 
-# For OpenAI models
-OPENAI_API_KEY=your_openai_api_key_here
-
-# For Google Gemini models (e.g., gemini-2.5-flash)
-GOOGLE_API_KEY=your_google_api_key_here
-GEMINI_API_KEY=your_google_api_key_here
-
+# =============================================================================
+# HuggingFace Configuration
+# =============================================================================
 # For HuggingFace dataset access (required for run_experimental_tool for dataset access)
-HF_TOKEN=your_huggingface_token_here
+HF_TOKEN=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
 
 # Redirect HuggingFace cache to project directory (.cache folder should be in the repo)
 HF_HOME=.cache/huggingface
 TRANSFORMERS_CACHE=.cache/huggingface/transformers
 HF_DATASETS_CACHE=.cache/huggingface/datasets
 
-# For web search functionality (optional, only required if using OpenDeepSearchTool)
-SERPER_API_KEY=your_serper_api_key_here
+# =============================================================================
+# External API Services
+# =============================================================================
+# For web search functionality (SERPER API)
+SERPER_API_KEY=6504ca9b486fb22c4364eed8fff043a7e61f6783
+
+# For Semantic Scholar paper search
+S2_API_KEY=Kubg0vvaFi1SAnQYYyFk35u0ZRMZyr6E9twRvWXS
+
+# =============================================================================
+# Optional Services (Not Required)
+# =============================================================================
+# Google Gemini (if using native Google API - not needed with NewAPI)
+# GOOGLE_API_KEY=your_google_api_key_here
+# GEMINI_API_KEY=your_google_api_key_here
+
+# Embeddings (uses NewAPI if not set separately)
+# OPENAI_API_KEY_EMBEDDINGS=your_embeddings_key_here
+
+# SearXNG (optional alternative to SERPER)
+# SEARXNG_INSTANCE_URL=your_searxng_instance_url
+# SEARXNG_API_KEY=your_searxng_api_key
+
+# Jina AI (optional)
+# JINA_API_KEY=your_jina_api_key
 
 
