--- a/.llm_config.yaml
+++ b/.llm_config.yaml
@@ -1,22 +1,29 @@
 # LLM Configuration File
 # This file controls which language models are used by different components
+#
+# All models are accessed via NewAPI (newapi.tsingyuai.com/v1)
+# Supported models: gpt-5-nano, gpt-5-mini, gpt-5, gpt-4o
+# Model fallback and retry are handled by NewAPI, not in code
 
 main_agents:
   # Model for all main agents (Manager, Ideation, Experimentation, Writeup)
-  model: claude-sonnet-4-5 # Latest Claude model (released sept 29, 2025)
+  # Using gpt-4o as default (stable and cost-effective via NewAPI)
+  model: gpt-4o
+
+  # GPT-5 specific settings (uncomment if using gpt-5 series)
+  # model: gpt-5
+  # reasoning_effort: high  # minimal, low, medium, high
 
   # Claude Extended Thinking settings (optional, only for Claude 4.x models)
-  budget_tokens: 16384  # Reasoning token budget (min: 1024, recommended: 16k+)
-
-  # # # Gemini-specific settings
-  # model: gemini-2.5-pro
-  # thinking_budget: 32768
+  # model: claude-sonnet-4-5
+  # budget_tokens: 16384  # Reasoning token budget (min: 1024, recommended: 16k+)
 
 run_experiment_tool:
   # Models for RunExperimentTool (AI-Scientist-v2 subprocess)
-  code_model: gpt-5
-  feedback_model: gpt-5
-  vlm_model: gpt-5
-  report_model: gpt-5
-  # GPT-5 specific settings
+  # Using gpt-4o for stability, can upgrade to gpt-5 for better results
+  code_model: gpt-4o
+  feedback_model: gpt-4o
+  vlm_model: gpt-4o
+  report_model: gpt-4o
+  # GPT-5 specific settings (used when code_model is gpt-5)
   reasoning_effort: high  # minimal, low, medium, high
