--- a/external_tools/run_experiment_tool/bfts_config.yaml
+++ b/external_tools/run_experiment_tool/bfts_config.yaml
@@ -23,7 +23,7 @@ exec:
 generate_report: True
 # LLM settings for final report from journal
 report:
-  model: gpt-4o-2024-11-20
+  model: gpt-4o
   temp: 1.0
 
 experiment:
@@ -56,19 +56,18 @@ agent:
 
   # LLM settings for coding
   code:
-    model: gpt-4o  # Options: gpt-4o, gpt-4-turbo, gpt-4o-mini
+    model: gpt-4o  # Options: gpt-4o, gpt-5, gpt-5-mini, gpt-5-nano
     temp: 1.0
     max_tokens: 12000
 
   # LLM settings for evaluating program output / tracebacks
   feedback:
-    model: gpt-4o-2024-11-20
-    # gpt-4o
+    model: gpt-4o
     temp: 0.5
     max_tokens: 8192
 
   vlm_feedback:
-    model: gpt-4o-2024-11-20
+    model: gpt-4o
     temp: 0.5
     max_tokens: null
 
