服务器连不上HF，.env加入HF镜像站地址

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ ANTHROPIC_API_KEY=sk-qN38FkO0BZa79ZmaQIU6BCoxc8NaeRlolLaNeKVzXpNP1F5q
 # =============================================================================
 # For HuggingFace dataset access (required for run_experimental_tool for dataset access)
 HF_TOKEN=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
-
+HF_ENDPOINT=https://hf-mirror.com
 # Redirect HuggingFace cache to project directory (.cache folder should be in the repo)
 HF_HOME=.cache/huggingface
 TRANSFORMERS_CACHE=.cache/huggingface/transformers
